# scalendar

./: .gitignore  .travis.yml  ChangeLog.md  LICENSE  README.markdown  README.md  SCalendar.cabal  circle.yml  scalendar.cabal  stack.yaml
.github/workflows/: README.md  build.yml  draft.yml  release.yml
example/: README.md  draft1  example.cabal  stack.yaml
example/app/: Main.hs
example/migration/: Main.hs
example/src/Booking/: API.hs  Api.hs  Config.hs  Interpreter.hs  Types.hs
example/src/CRUD/: CRUD.hs  Operations.hs
example/src/Schemas/: Booking.hs
lib/SCalendar/: BreadCrumbs.hs  DataTypes.hs  Internal.hs
libs/SCalendar/: Operations.hs
scripts/: install-stack.sh
src/Time/SCalendar/: DataTypes.hs  Internal.hs  Operations.hs  Types.hs  Zippers.hs
test/: Test.hs
test/SCalendarTest/: Arbitrary.hs  Constructors.hs  Helpers.hs  Internal.hs  Operations.hs
