name:                SCalendar
version:             0.1.0.0
synopsis:            This is a library for handling calendars and resource availability
                     based on the "top-nodes algorithm" and set operations.
homepage:            https://github.com/stackbuilders/scalendar
license:             MIT
license-file:        LICENSE
author:              Sebastian Pulido Gómez <spulido@stackbuilders.com>
maintainer:          Sebastian Pulido Gómez <spulido@stackbuilders.com>
category:            Time
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:   src
  exposed-modules:   Time.SCalendar.Operations
                   , Time.SCalendar.Zippers
                   , Time.SCalendar.DataTypes
                   , Time.SCalendar.Internal
  build-depends:    base >= 4.8 && < 5
                  , containers >= 0.5.7.1 && < 0.6
                  , time >= 1.5 && < 2
                  , text >= 1.2.0.0 && < 2
  default-language: Haskell2010

test-suite scalendar-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:  SCalendarTest.Internal
                , SCalendarTest.Operations
                , SCalendarTest.Arbitrary
                , SCalendarTest.Helpers
  main-is:             Test.hs
  build-depends:       base
                     , SCalendar
                     , hspec >= 2.4.2 && < 3.0
                     , QuickCheck >= 2.9.2 && < 3.0
                     , time
                     , containers
                     , text
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
