name:                scalendar
version:             1.2.0
tested-with:         GHC==7.10.3, GHC==8.0.2, GHC==8.2.1
synopsis:            A library for handling calendars and resource availability over time.
description:         scalendar is a library based on the "top-nodes algorithm", invented by
                     Martin Rayrole <https://en.wikipedia.org/wiki/Top-nodes_algorithm>, and
                     set operations, which makes it easy to handle the availability of a set of
                     resources over time.

homepage:            https://github.com/stackbuilders/scalendar
license:             MIT
license-file:        LICENSE
copyright:           2017 Stack Builders Inc.
author:              Sebastian Pulido Gómez <spulido@stackbuilders.com>
maintainer:          Stack Builders <hackage@stackbuilders.com>
category:            Time
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  CHANGELOG.md
                   , README.md

library
  hs-source-dirs:   src
  exposed-modules:   Time.SCalendar.Operations
                   , Time.SCalendar.Zippers
                   , Time.SCalendar.Types
                   , Time.SCalendar.Internal
  build-depends:    base >= 4.8 && < 5
                  , containers >= 0.5.7.1 && < 0.6
                  , time >= 1.5 && < 2
                  , text >= 1.2.0.0 && < 2
  default-language: Haskell2010

test-suite scalendar-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:  SCalendarTest.Internal
                , SCalendarTest.Operations
                , SCalendarTest.Arbitrary
                , SCalendarTest.Helpers
                , SCalendarTest.Constructors
  main-is:             Test.hs
  build-depends:       base
                     , SCalendar
                     , hspec >= 2.4.2 && < 3.0
                     , QuickCheck >= 2.9.2 && < 3.0
                     , time
                     , containers
                     , text
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
