name:                example
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/example#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Booking.Types
  build-depends:       base >= 4.7 && < 5
                     , persistent-sqlite >= 2.5 && <= 2.6.2
                     , time
                     , text
                     , containers
  default-language:    Haskell2010

executable example-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , example
  default-language:    Haskell2010
