name:                example
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/example#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Booking.Types
                     , Booking.Api
                     , Booking.Config
                     , Booking.Interpreter
                     , Schemas.Booking
                     , CRUD.Operations
  build-depends:       base >= 4.8 && < 5
                     , persistent-sqlite >= 2.5 && <= 2.6.2
                     , persistent-template == 2.5.2
                     , persistent >= 2.5 && <= 2.7.0
                     , time
                     , text
                     , containers
                     , mtl == 2.2.1
                     , servant == 0.9.1.1
                     , servant-server
                     , aeson >= 1.0.2.1 && <= 1.2.1.0
                     , SCalendar
  default-language:    Haskell2010

executable runExample
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , example
  default-language:    Haskell2010

executable runMigration
  hs-source-dirs:      migration
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , example
  default-language:    Haskell2010
